text-align: start correction

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -41,7 +41,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  text-align: flex-start;
+  text-align: start;
 
   @include mobile {
     width: 75%;
